# ai_agent_tools

./: .gitignore  README.md
coder/output/: code_and_output.txt
coder/src/coder/: crew.py
debater/: .gitignore
debater/output/: decide.md  oppose.md  propose.md
debater/src/debater/: crew.py  main.py
debater/src/debater/config/: agents.yaml  tasks.yaml
deep_research_prompt_engineerer/: README.md  pyproject.toml
deep_research_prompt_engineerer/output/: deep_research_prompt.md
deep_research_prompt_engineerer/src/deep_research_prompt_engineerer/: crew.py  main.py
deep_research_prompt_engineerer/src/deep_research_prompt_engineerer/config/: agents.yaml  tasks.yaml
financial_researcher/knowledge/: user_preference.txt
financial_researcher/output/: report.md
financial_researcher/src/financial_researcher/config/: agents.yaml  tasks.yaml
jd_summarizer/: README.md  pyproject.toml
jd_summarizer/output/: report.md
jd_summarizer/src/jd_summarizer/: crew.py  main.py
jd_summarizer/src/jd_summarizer/config/: agents.yaml  tasks.yaml
stock_picker/memory/: chroma.sqlite3  long_term_memory_storage.db
stock_picker/output/: decision.md  research_report.json  trending_companies.json
stock_picker/src/stock_picker/: crew.py
