[project]
name = "deep_research_prompt_engineerer"
version = "0.1.0"
description = "deep_research_prompt_engineerer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
deep_research_prompt_engineerer = "deep_research_prompt_engineerer.main:run"
run_crew = "deep_research_prompt_engineerer.main:run"
train = "deep_research_prompt_engineerer.main:train"
replay = "deep_research_prompt_engineerer.main:replay"
test = "deep_research_prompt_engineerer.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
