[project]
name = "jd_summarizer"
version = "0.1.0"
description = "jd_summarizer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "crewai[tools]>=0.130.0,<1.0.0",
    "selenium>=4.33.0",
    "webdriver-manager>=4.0.2",
]

[project.scripts]
jd_summarizer = "jd_summarizer.main:run"
run_crew = "jd_summarizer.main:run"
train = "jd_summarizer.main:train"
replay = "jd_summarizer.main:replay"
test = "jd_summarizer.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
